<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:text="@string/info_nMDP" />

            <EditText
                android:id="@+id/info_nmdp"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_vMDP"/>
            <EditText
                android:id="@+id/info_verif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"  />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/swt_notifOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/info_notifOn" />

            <Switch
                android:id="@+id/swt_notifPM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_notifPM" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/info_annuler"
                android:text="@string/annuler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"/>
            <Button
                android:id="@+id/info_sauvegarder"
                android:text="@string/sauvegarder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"/>
        </LinearLayout>

    </LinearLayout>

    <Spinner
        android:id="@+id/spn_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp" />

</RelativeLayout>