<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="486dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_push"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#0CB9C4"
            android:padding="10dp"
            android:text="@string/connected_3j"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="2dp" />

        <Button
            android:id="@+id/btn_pull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#0CB9C4"
            android:padding="10dp"
            android:text="@string/connected_tj"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="2dp" />

        <Button
            android:id="@+id/btn_quitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#DD4B39"
            android:padding="10dp"
            android:text="@string/quitter"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="257dp"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:baselineAlignBottom="true"
            android:src="@mipmap/airetd1_200_74" />

    </LinearLayout>
</RelativeLayout>