<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2013 The Android Open Source Project
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.

 Modified by Quentin Mayer, AIR&D.
-->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">
<!--
        height 182dp
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="219dp"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginBottom="34dp"
        android:orientation="vertical">

        <!-- <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_weight="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_address"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_weight="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_weight="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_data"
                android:textSize="18sp"
                android:layout_weight="0.01"/>

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/data_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text=" "
                android:layout_weight="0.3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_heure"
                android:textSize="18sp"
                android:layout_weight="0.01"/>

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/data_heure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text=" "
                android:layout_weight="0.3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_weight="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                android:text="@string/label_lat"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/data_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text=" "
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/label_long"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/data_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text=" "
                android:textSize="18sp" />

        </LinearLayout>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_bike"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@mipmap/tb_bike" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />


            <ImageView
                android:id="@+id/img_stroller"
                android:layout_width="153dp"
                android:layout_height="match_parent"
                android:src="@mipmap/tb_stroller" />

        </LinearLayout>

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"

            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@color/colorWeather"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_temp"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/txt_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@color/colorWeather"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_humid"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/txt_humid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="362dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_weight="0.1">

            <!--
            android:id="@+id/img_echelle"
            android:layout_width="350dp"
            android:layout_height="240dp"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:layout_centerInParent="true"


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            -->

            <ImageView
                android:id="@+id/img_echelle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="@dimen/size_layout_marginBottom"
                android:src="@mipmap/test3" />

            <com.marcinmoskala.arcseekbar.ArcSeekBar
                android:id="@+id/seekArc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/size_layout_marginStart"
                android:layout_marginLeft="@dimen/size_layout_marginLeft"
                android:layout_marginTop="@dimen/size_layout_marginTop"
                android:layout_marginEnd="@dimen/size_layout_marginEnd"
                android:layout_marginRight="@dimen/size_layout_marginRight"
                android:layout_marginBottom="@dimen/size_layout_marginBottom"
                app:enabled="false"
                app:progress="50"
                app:progressColor="@color/pm_tb"
                app:roundEdges="false" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_alignBottom="@+id/seekArc"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:id="@+id/llt_pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/data_pm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.3"
                        android:text=""
                        android:textSize="40sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.03"
                        android:text="@string/label_pm"
                        android:textSize="18sp" />

                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="11dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBar"
            android:text="@string/device_data"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>